--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jo White and the Seven Gits</title>
+    <title>Jo White Coffee</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,36 +17,38 @@
     <hr id="below-coffee">
 
     <div class="row">
+        <form class="col-6">
+            <label for="roast-selection" class="d-block mt-3">Roast</label>
+            <select id="roast-selection" class="d-block form-control mb-3">
+                <option>all</option>
+                <option>light</option>
+                <option>medium</option>
+                <option>dark</option>
+            </select>
+            <label for="coffee-search" class="d-block">Coffee Name</label>
+            <input id="coffee-search" type="search" class="d-block form-control mb-3">
+            <input id="submit" type="submit" class="btn btn-block"/>
+            <!--code below is for bonus-->
+            <hr class="d-flex mb-2">
+            <h3 class="text-center display-4 mb-0 mx-auto">Add a Coffee</h3>
+            <label for="bonus-roast-selection" class="d-block">Roast</label>
+            <select id="bonus-roast-selection" class="d-block form-control mb-3">
+                <option>light</option>
+                <option>medium</option>
+                <option>dark</option>
+            </select>
+            <label for="bonus-coffee-input" class="d-block">Coffee Name</label>
+            <input id="bonus-coffee-input" type="search" class="d-block form-control mb-3">
+            <input id="add" type="submit" class="btn btn-block mb-3"/>
+
+            <div id="output-coffee"></div>
+        </form>
+
         <div class="col-6" id="displayed-coffees">
             <div id="coffees" class="d-flex flex-wrap"></div>
         </div>
 
-    <form class="col-6">
-        <label for="roast-selection" class="d-block mt-3">Roast</label>
-        <select id="roast-selection" class="d-block form-control mb-3">
-            <option>all</option>
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <label for="coffee-search" class="d-block">Coffee Name</label>
-        <input id="coffee-search" type="search" class="d-block form-control mb-3">
-        <input id="submit" type="submit" class="btn btn-block"/>
-<!--code below is for bonus-->
-        <hr class="d-flex mb-2">
-        <h3 class="text-center display-4 mb-0 mx-auto">Add a Coffee</h3>
-        <label for="bonus-roast-selection" class="d-block">Roast</label>
-        <select id="bonus-roast-selection" class="d-block form-control mb-3">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <label for="bonus-coffee-input" class="d-block">Coffee Name</label>
-        <input id="bonus-coffee-input" type="search" class="d-block form-control mb-3">
-        <input id="add" type="submit" class="btn btn-block mb-3"/>
 
-        <div id="output-coffee"></div>
-    </form>
     </div> <!--close div for row w all coffees and forms-->
 
     <footer class="small">
