--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </footer>
 </div> <!--close div container-->
 
-<video autoplay muted loop class="coffee-vid">
+<video autoplay muted loop playsinline class="coffee-vid">
     <source src="img/pexels-ron-lach-6938926.mp4">
 </video>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
